public/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
[x-cloak] { display: none !important; }

a {
  color: black;
  text-decoration: none; /* no underline */
}
body {

  font-family: "Poppins", sans-serif;
  margin: 0;
  padding: 0;
  font-size: 16px;
  box-sizing: border-box;

    background: -webkit-linear-gradient(to top, #BDDABF , #D6E8D7); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to top, #BDDABF , #D6E8D7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.mybutton{
    color: #fff;
    background: #222A23;
    font-size: 1em;
    font-weight: bold;
    outline: none;
    border: none;
    border-radius: 2px;
    transition: .2s ease-in;
    cursor: pointer;
}
.mybutton:hover{
    background: #C5DFC7;
}
.backcolor {
    background-color: #F7FAF7;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
    border-radius: 25px;

    padding: 10px;
}

.container {
  margin: 50px;
  height: 100vh;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(10, 1fr);
  gap: 30px;
  grid-auto-flow: row;
  grid-template-areas:
    "left Header Header Header Header"
    "left Header Header Header Header"
    "left first-data first-data first-data first-data"
    "left first-data first-data first-data first-data"
    "left first-data first-data first-data first-data"
    "left first-data first-data first-data first-data"
    "left second-data second-data second-data second-data"
    "left second-data second-data second-data second-data"
    "left second-data second-data second-data second-data"
    "left second-data second-data second-data second-data";
}


/* HEADER */
.Header {

  grid-area: Header;
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.form_dates{
  width: 60%;
  display:flex;
  justify-content: space-around;
}

.actionsheader{
    width: 100%;
    height: 40px;
    display:flex;
    flex-direction: row;

}



/* LEFT column */

.left {

  grid-area: left;
  flex-direction: column;
  gap:150px;
  display:flex;
  flex-wrap: wrap;

}

.first-data {
  grid-area: first-data;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;

}

.days{
  width:80%;
  height: 70%;
  display:grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(3, 1fr);
  border-bottom: 1px solid #FFFFF7;
  border-left: 1px solid #FFFFF7;

}

.day {
  font-size: 14px;
  display:flex;
  justify-content: center;
    align-items: center;
  border-top: 1px solid #FFFFF7;
  border-right: 1px solid #FFFFF7;
}

.second-data {
  grid-area: second-data;
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;

}



.user_image {
  margin-top: 10px;
  height: 200px;
  width: 200px;
}
.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

}

.menu {
  display: flex;
  flex-direction: column;
}


.operations {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}



/* effects & classes */

input[type="date"]{


  color: black;
  font-size: 18px;
  border: none;
  outline: none;
  border-radius: 5px;
}
::-webkit-calendar-picker-indicator{

  padding: 5px;
  cursor: pointer;
  border-radius: 3px;
}

.flexlist {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
}

.flexgap {
  gap: 50px;
}



.icone {
  -webkit-transition: -webkit-transform 0.8s ease-in-out;
  transition: transform 0.8s ease-in-out;
  cursor: pointer;
}

.icone:hover {
  -webkit-transform: rotate(360deg);
  transform: rotate(360deg);
}

ul {
  padding: 0;
  list-style-type: none;
}
/*
ul li:hover {
  text-decoration: underline;
}
*/

.closeIcon {
  display: none;
}
.hamburger{
  display:none;
}
.title h3 {

    font-size: 1.5em;
    margin: .5em 0 .75em;

}





/* table */

table {
  border: 1px solid #ccc;
  border-collapse: collapse;
  margin: 0;
  padding: 0;
  width: 100%;
  table-layout: fixed;
}

 caption {
  font-size: 1.5em;
  margin: .5em 0 .75em;
}

table tr {
  background-color: #f8f8f8;
  border: 1px solid #ddd;
  padding: .35em;
}

table th,
table td {
  padding: .625em;
  text-align: center;
}

table th {
  font-size: .85em;
  letter-spacing: .1em;
  text-transform: uppercase;
}




/* MOBILE */

@media (max-width: 480px) {
  .container {
    height: 100vh;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(10, 1fr);

    grid-auto-flow: row;
    grid-template-areas:
      "left"
      "Header"
      "first-data"
      "second-data";
  }
  .user_image {

    height: 50px;
    width: 50px;
  }


  * {
    font-size: 14px;;
  }


  .form_dates {
     width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}


  .flexgap {
     gap: 10px;
}

.hamburger {
  display: block;

  cursor: pointer;
}

.showMenu {
  display:none;
  transform: translateY(-100%);
}

.menu{
  transform: translateY(0);
  transition: transform 0.5s;
}

.left{
  gap:0px;
}
.days{
  display:none;
}


/* table respon */
table {
  border: 0;
}



table thead {
  border: none;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

table tr {
  border-bottom: 3px solid #ddd;
  display: block;
  margin-bottom: .625em;
}

table td {
  border-bottom: 1px solid #ddd;
  display: block;
  font-size: .8em;
  text-align: right;
}

table td::before {
  /*
  * aria-label has no advantage, it won't be read inside a table
  content: attr(aria-label);
  */
  content: attr(data-label);
  float: left;
  font-weight: bold;
  text-transform: uppercase;
}

table td:last-child {
  border-bottom: 0;
}

}



/* BOOTSTRAP BUTTONS ONLY */

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");



.btn {

    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
    cursor: pointer;
    -webkit-appearance: button;
    text-transform: none;
    overflow: visible;
    outline: none;
}
.btn:hover, .btn:focus {
    text-decoration: none;
}

.btn-primary {
    color: #fff;
    background-color: #007bff;
    border-color: #007bff;
}
.btn-primary:hover {
    color: #fff;
    background-color: #0069d9;
    border-color: #0069d9;
}
.btn-primary:focus {
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
}

.btn-secondary {
    color: #fff;
    background-color: #6c757d;
    border-color: #6c757d;
}
.btn-secondary:hover {
    color: #fff;
    background-color: #5a6268;
    border-color: #5a6268;
}
.btn-secondary:focus {
    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
}

.btn-success {
    color: #fff;
    background-color: #28a745;
    border-color: #28a745;
}
.btn-success:hover {
    color: #fff;
    background-color: #218838;
    border-color: #218838;
}
.btn-success:focus {
    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
}

.btn-danger {
    color: #fff;
    background-color: #dc3545;
    border-color: #dc3545;
}
.btn-danger:hover {
    color: #fff;
    background-color: #c82333;
    border-color: #c82333;
}
.btn-danger:focus {
    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
}

.btn-warning {
    color: #212529;
    background-color: #ffc107;
    border-color: #ffc107;
}
.btn-warning:hover {
    color: #212529;
    background-color: #e0a800;
    border-color: #e0a800;
}
.btn-warning:focus {
    box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
}

.btn-info {
    color: #fff;
    background-color: #17a2b8;
    border-color: #17a2b8;
}
.btn-info:hover {
    color: #fff;
    background-color: #138496;
    border-color: #138496;
}
.btn-info:focus {
    box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
}

.btn-light {
    color: #212529;
    background-color: #f8f9fa;
    border-color: #f8f9fa;
}
.btn-light:hover {
    color: #212529;
    background-color: #e2e6ea;
    border-color: #e2e6ea;
}
.btn-light:focus {
    box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
}

.btn-dark {
    color: #fff;
    background-color: #343a40;
    border-color: #343a40;
}
.btn-dark:hover {
    color: #fff;
    background-color: #23272b;
    border-color: #23272b;
}
.btn-dark:focus {
    box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
}

.btn-link {
    font-weight: 400;
    color: #007bff;
    background-color: transparent;
    border-color: transparent;
}
.btn-link:hover {
    color: #0056b3;
    text-decoration: underline;
    background-color: transparent;
    border-color: transparent;
}

